readme file added

--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -15,6 +15,9 @@
     padding: 10px;
     color: rgb(0, 0, 0);
     font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .table-row {
