--- a/src/components/LoadData/Loaddata.css
+++ b/src/components/LoadData/Loaddata.css
@@ -105,3 +105,48 @@
     padding: 10px;
     cursor: pointer;
 }
+
+@media only screen and (max-width:600px) {
+    .products-container {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 20px;
+        padding: 20px;
+
+    }
+
+    .social-links-container {
+        display: none;
+    }
+
+    .social-links {
+        text-decoration: none;
+        color: black;
+        font-size: 20px;
+        font-weight: bold;
+        text-shadow: 4px 4px 6px red !important;
+        position: fixed;
+        top: 200px;
+    }
+
+    .bikes-container {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 20px;
+    }
+
+    .cart-Div {
+        border: 0px solid white;
+        border-radius: 10px;
+        background: white;
+        box-shadow: 2px 2px 4px #000000,
+            -2px -2px 4px #ffffff;
+        width: 97%;
+        height: max-content;
+        text-align: center;
+        color: rgb(0, 0, 0);
+        padding: 5px;
+        /* position: sticky;
+        top: 100px; */
+    }
+}
